  `CAML_NAME_SPACE` to avoid bringing unprefixed names into scope: this is now
  the default behavior.
  (Nicolás Ojeda Bär, review by Xavier Leroy)

- #10902: Do not register empty code fragments in natdynlink.
  (David Allsopp, review by Xavier Leroy and Damien Doligez)

- #10965: `caml_fatal_error_hook`, GC timing hooks, and
  `caml_scan_roots_hook` are now atomic variables. Restore GC timing
  hooks.
  (Guillaume Munch-Maccagnoni, review by Enguerrand Decorne, Xavier
  Leroy, Gabriel Scherer, and KC Sivaramakrishnan)

- #10875: Add option to allocate stacks with mmap(MAP_STACK) instead of malloc.
  This is exposed via a configure --enable-mmap-map-stack option, and is
  enabled by default on OpenBSD where it is mandatory.
  (Anil Madhavapeddy, review by Gabriel Scherer, Tom Kelly,
   Michael Hendricks and KC Sivaramakrishnan).

- #10950: Do not use mmap to allocate Caml_state.
  In order to reduce virtual memory usage, we dynamically allocate
  the domain_state structure.
  (Enguerrand Decorne, KC Sivaramakrishnan and Tom Kelly,
  review by Anil Madhavapeddy and Gabriel Scherer)

- #11010: Use strerror_r for reentrant error string conversion.
  (Anil Madhavapeddy and Xavier Leroy, review by same and Edwin Török)

- #11002, #11066, #11086: Do not use Begin_roots/End_roots macros in
  the runtime system.  Also fix a missing root registration in the
  implementation of Unix.write on Windows.
  (Nicolás Ojeda Bär, Daniel Bünzli and Antonin Décimo,
   review by Xavier Leroy and David Allsopp)

- #11022: Track GC work for all managed bigarray allocations
  (Stephen Dolan, report by Andrew Hunter, review by Damien Doligez)

- #10802: Use 4.12 value macros and helpers in C code
  (Antonin Décimo, review by Gabriel Scherer)

- #11105: Fix handling of fiber stack cache with multiple domains
  (Jon Ludlam, KC Sivaramakrishnan and Tom Kelly)

- #11054: Respect user provided maximum stack space
  Make sure the stack we initially request is sized accordingly to