@@ -14,10 +14,10 @@ index 7bb4730a7f..c6003a4193 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 3a80375f6f..c80dc5c1ad 100644
+index 6c15a0ff06..605fd3d97a 100644
 --- a/Changes
 +++ b/Changes
-@@ -356,13 +356,13 @@ OCaml 4.14.0
+@@ -363,13 +363,13 @@ OCaml 4.14.0
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -33,7 +33,7 @@ index 3a80375f6f..c80dc5c1ad 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -462,6 +462,9 @@ OCaml 4.14.0
+@@ -469,6 +469,9 @@ OCaml 4.14.0
  - #10786: The implementation of Complex.norm now uses Float.hypot.
    (Christophe Troestler, review by David Allsopp and Xavier Leroy)
  
@@ -43,7 +43,7 @@ index 3a80375f6f..c80dc5c1ad 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -717,6 +720,9 @@ OCaml 4.14.0
+@@ -724,6 +727,9 @@ OCaml 4.14.0
  
  ### Build system:
  
@@ -6661,7 +6661,7 @@ index 0000000000..3270d34f9e
 +  * x86 we require the caml_extra_params symbol from the RTS. */
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..c73cc7bd6b
+index 0000000000..73b00d871d
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,6652 @@
@@ -6681,10 +6681,10 @@ index 0000000000..c73cc7bd6b
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 3a80375f6f..c80dc5c1ad 100644
++index 6c15a0ff06..605fd3d97a 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -356,13 +356,13 @@ OCaml 4.14.0
++@@ -363,13 +363,13 @@ OCaml 4.14.0
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -6700,7 +6700,7 @@ index 0000000000..c73cc7bd6b
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -462,6 +462,9 @@ OCaml 4.14.0
++@@ -469,6 +469,9 @@ OCaml 4.14.0
 + - #10786: The implementation of Complex.norm now uses Float.hypot.
 +   (Christophe Troestler, review by David Allsopp and Xavier Leroy)
 + 
@@ -6710,7 +6710,7 @@ index 0000000000..c73cc7bd6b
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -717,6 +720,9 @@ OCaml 4.14.0
++@@ -724,6 +727,9 @@ OCaml 4.14.0
 + 
 + ### Build system:
 + 
